<resources>

    <string name="app_name">Events Manager</string>
    <string name="app_version">2.0</string>
    <string name="edit_event_activity_label">Event editor</string>
    
    <string name="serviceStateRunning">Service running</string>
    <string name="serviceStateStoped">Service stoped</string>
    
    <!-- Pestañas -->
    <string name="tabTasksId">tabTasks</string>
    <string name="tabTasks">Tasks</string>  
    <string name="tabWorkId">tabWork</string>
    <string name="tabWork">Work</string>
    <string name="tabShopId">tabShop</string>
    <string name="tabShop">Shopping</string>
    <string name="tabAlarmId">tabAlarms</string>
    <string name="tabAlarm">Alarms</string>
    <string name="empty_events">No events. Press \'Menu\' to add a new task event.</string>
    
    <!-- Menú contextual -->
    <string name="txtFin">End Event</string>
    <string name="txtEditar">Edit</string>
    <string name="txtEliminar">Delete</string>
    
    <!-- Menú de opciones -->
    <string name="menuNew">New</string>
    <string name="menuOptions">Preferences</string>
    <string name="menuAbout">About</string>
    
    <!-- Strings para la edición de eventos -->
    <string name="txtTitulo">Title:</string>
    <string name="txtDescripcion">Description:</string>
    <string name="txtTipo">Event type:</string>
    <string name="txtTask">Task</string>
    <string name="txtWork">Work</string>
    <string name="txtShop">Shopping</string>
    <string name="txtNotify">Notify event</string>
    <string name="txtTipoNotify">Type:</string>
    <string name="txtNotifyAlarm">Alarm</string>
    <string name="txtNotifyBar">Notification</string>
    <string name="txtNotifyBoth">Both</string>
    <string name="txtDate">Date:</string>
    <string name="txtTime">Time:</string>
    <string name="txtBtnDate">Select a date</string>
    <string name="txtBtnTime">Select a time</string>
    <string name="txtNoDateTime"> </string>
    <string name="txtRepeat">Repeat</string>
    <string name="txtMonday">MON</string>
    <string name="txtTuesday">TUE</string>
    <string name="txtWednesday">WED</string>
    <string name="txtThursday">THU</string>
    <string name="txtFriday">FRI</string>
    <string name="txtSaturday">SAT</string>
    <string name="txtSunday">SUN</string>
    <string name="btnSave">Save Event</string>
    
    <!-- Strings para el menú de opciones -->
    <string name="prefTabs">Tabs:</string>
    <string name="prefTabTaskSummary">Show Tasks tab</string>
    <string name="prefTabWorkSummary">Show Works tab</string>
    <string name="prefTabShopSummary">Show Shopping tab</string>
    <string name="prefTabAlarmsSummary">Show Alarms tab</string>
    <string name="prefTabOrder">Tabs order:</string>
    <string name="prefTabOrderSummary">Click for down</string>
    
    <string name="prefSound">Ringtone:</string>
    <string name="prefRingtone">Set ringtone</string>
    <string name="prefVibrate">Vibration</string>
    <string name="prefVibrateSummary">Set vibration with alarm</string>

    <string name="prefAutoEnd">End events</string>
    <string name="prefAutoEndEvent">End events automatically after notify</string>
    <string name="prefAutoEndEventSummary">End event after notify</string>
    
    <!-- Mensajes -->
    <string name="msgCreate">Event created successfully</string>
    <string name="msgUpdate">Event updated successfully</string>
    <string name="msgDelete">Event deleted successfully</string>
    <!-- Mensajes de error -->
    <string name="msgNoTitle">ERROR: You have add a event title</string>
    <string name="msgNoTipo">ERROR: You have add a event type</string>
    <string name="msgNoNotify">ERROR: You have to set how notify event</string>
    <string name="msgBadDate">ERROR: Date and time must be after</string>
    
    <!-- Diálogo de alarma -->
    <string name="dialogBtnCerrar">Close</string>
    
    <!-- Diálogo "Acerca de" -->
    <string name="aboutApp">Developed by Jesús Cea Oliva, May. 2015</string>

</resources>
